better radios off center fix

--- a/src/app/app.component.controls.scss
+++ b/src/app/app.component.controls.scss
@@ -42,7 +42,7 @@
     border-radius: 4px;
     color: #fff;
     margin: 0;
-	line-height: none;
+	line-height: 56px;
   }
   
 
